feat: create new funcs

--- a/public/src/app/modules/header/header/header.component.html
+++ b/public/src/app/modules/header/header/header.component.html
@@ -11,6 +11,7 @@
             <span class="hover-header">Desenvolvedores</span>
         </li>
         <li *ngIf="isLoggedUser">Olá, {{ nameUser }}</li>
+        <li *ngIf="isLoggedUser" routerLink="/" class="button register" (click)="clearCredentials()">Sair</li>
         <li *ngIf="!isLoggedUser" routerLink="/login" (click)="setToggleNavBar()">
             <span>Login</span>
             <span class="hover-header" (click)="setToggleNavBar()">Login</span>
