--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -53,7 +53,7 @@
 .container {
     background-color: transparent;
     width: 100vw;
-    height: calc(100vh - 80px);
+    min-height: calc(100vh - 80px);
     display: flex;
     align-items: center;
     justify-content: center;
