--- a/public/src/app/modules/header/header/header.component.css
+++ b/public/src/app/modules/header/header/header.component.css
@@ -71,9 +71,20 @@
     z-index: 99;
 }
 
+.user {
+    color: var(--destak-primary-color);
+    font-size: 24px;
+    margin-left: 20px;
+}
+
 @media screen and (max-width: 750px) {
     .background-header {
         padding: 0 20px;
+    }
+
+    .user {
+        margin-left: 0;
+        margin-top: 20px;
     }
 
     .sidebar {
